--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "instagram-private-api": "^0.6.8",
+    "mongo-scheduler-more": "^1.1.4",
     "node-schedule": "^1.3.2"
   }
 }
