--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Alexander Hoerl <alexander.horl2@live.de>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "instagram-private-api": "^0.6.8",
     "mongo-scheduler-more": "^1.1.4"
