--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "formidable": "^1.2.1",
     "instagram-private-api": "^0.6.8",
     "mongo-scheduler-more": "^1.2.1"
   }
