--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src",
+    "dev": "nodemon src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +17,8 @@
     "formidable": "^1.2.1",
     "instagram-private-api": "^0.6.8",
     "mongo-scheduler-more": "^1.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
