--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src",
-    "dev": "nodemon src --ignore src/cookies/ --ignore uploads/",
+    "dev": "nodemon src --ignore cookies/ --ignore uploads/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
