--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "author": "Alexander Hoerl <alexander.horl2@live.de>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "instagram-private-api": "^0.6.8",
+    "jsonwebtoken": "^8.5.1",
     "mongo-scheduler-more": "^2.1.3",
     "mongodb": "^3.2.2",
+    "mongoose": "^5.5.4",
     "nodemailer": "^5.1.1"
   },
   "devDependencies": {
