--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
-    "instagram-private-api": "^1.30.0",
+    "inquirer": "^7.0.0",
+    "instagram-private-api": "^1.31.0",
     "jsonwebtoken": "^8.5.1",
     "mongo-scheduler-more": "^2.1.3",
     "mongodb": "^3.2.2",
