added mailer settings

--- a/config-template.json
+++ b/config-template.json
@@ -8,5 +8,15 @@
     "urlDev": "",
     "user": "",
     "password": ""
+  },
+  "mailer": {
+    "host": "",
+    "port": 465,
+    "secure": true,
+    "auth": {
+      "user": "",
+      "pass": ""
+    },
+    "debug": true
   }
 }
