--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formidable": "^1.2.1",
     "inquirer": "^7.0.0",
     "instagram-private-api": "^1.31.0",
+    "instagram-web-api": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongo-scheduler-more": "^2.1.3",
     "mongodb": "^3.2.2",
@@ -28,5 +29,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "arrowParens": "avoid"
   }
 }
