changes regarding the way of handling sessions upgraded, added and removed dependencies

--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
   "author": "Alexander Hoerl <alexander.horl2@live.de>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
-    "inquirer": "^7.0.0",
-    "instagram-private-api": "^1.31.0",
     "instagram-web-api": "^2.2.2",
     "jsonwebtoken": "^8.5.1",
-    "mongo-scheduler-more": "^2.1.3",
+    "mongo-scheduler-more": "https://github.com/AlexanderProd/mongo-scheduler.git",
     "mongodb": "^3.2.2",
     "mongoose": "^5.7.5",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "tough-cookie-filestore2": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
